--- a/recoverable-data-structures.tex
+++ b/recoverable-data-structures.tex
@@ -63,8 +63,8 @@
 \begin{document}
 
 %	\input{linked-list}
-%	\input{elimination-stack}
-	\input{BST-robust}
+	\input{elimination-stack}
+%	\input{BST-robust}
 	
 
 \end{document}
