--- a/elimination-stack.tex
+++ b/elimination-stack.tex
@@ -10,6 +10,7 @@
 \newcommand{\recoverExchange}{\mbox{\sc Exchange-Recover}}
 \newcommand{\visit}{\mbox{\sc Visit}}
 \newcommand{\switchPair}{\mbox{\sc SwitchPair}}
+\newcommand{\search}{\mbox{\sc Search}}
 
 
 \newcommand{\init}{\mbox{$\bot$}}
@@ -22,6 +23,8 @@
 
 \newcommand{\Info}{\mbox{Info}}
 \newcommand{\opInfo}{\mbox{OpInfo}}
+\newcommand{\pushInfo}{\mbox{PushInfo}}
+\newcommand{\popInfo}{\mbox{PopInfo}}
 \newcommand{\exInfo}{\mbox{ExInfo}}
 
 
@@ -54,14 +57,16 @@ An exchanger object supports the \exchange\ procedure, which allows
 	\} \\
 	
 	
-	Type \opInfo \{ \hspace*{17.7mm} $\triangleright$ subtype of \Info \\
-		\hspace*{6mm} \{\push, \pop\} $optype$ \\
-		\hspace*{6mm} Node $*curr$ \\
-		\hspace*{6mm} boolean $done$ \\
+	Type \pushInfo\ \{ \hspace*{20.0mm} $\triangleright$ subtype of \Info \\
+		\hspace*{6mm} Node $*pushNd$ \\
+	\} \\
+	
+	Type \popInfo\ \{ \hspace*{22.0mm} $\triangleright$ subtype of \Info \\
+		\hspace*{6mm} Node $*popNd$ \\
 	\} \\
 	
 	
-	Type \exInfo \{ \hspace*{17.7mm} $\triangleright$ subtype of \Info \\
+	Type \exInfo\ \{ \hspace*{24.0mm} $\triangleright$ subtype of \Info \\
 	\hspace*{6mm} \{\emptyst, \waiting, \busy\} $state$ \\
 	\hspace*{6mm} T $value, result$ \\
 	\hspace*{6mm} \exInfo\ $*partner, *slot$ \\
@@ -232,7 +237,11 @@ An exchanger object supports the \exchange\ procedure, which allows
 	
 	Node $*oldTop := Top$\;
 	$new.next := oldTop$\;
-	\KwRet $Top.\CAS(oldTop, new)$
+	\uIf {$Top.\CAS(oldTop, new)$} {
+		$nd.popby.\CAS(\init, \NULL)$ \;
+		\KwRet \True
+	} 
+	\KwRet \False
 \end{algorithm}
 
 \begin{algorithm}[H]
@@ -241,13 +250,10 @@ An exchanger object supports the \exchange\ procedure, which allows
 	Node $*nd$ = new Node $(myitem)$ \;
 	$nd.popby := \init$ \;
 	
-	\opInfo\ $data$ := new \opInfo\ (\push, $nd$, \False) \;
+	\pushInfo\ $data$ := new \pushInfo\ ($nd$) \;
 	\While{\True}{
 		$Announce[pid] := data$ \;
-		\uIf{\trypush$(nd)$}{
-			$data.done := \True$ \;
-			\KwRet \True
-		}
+		\uIf{\trypush$(nd)$} {\KwRet \True}
 		$range$ := CalculateRange()\;
 		$duration$ := CalculateDuration()\;
 		$othervalue$ := \visit$(myitem, range, duration)$\;
@@ -261,21 +267,24 @@ An exchanger object supports the \exchange\ procedure, which allows
 \begin{algorithm}[H]
 	\caption{boolean \recoverPush\ $()$}
 	
-	\opInfo\ $*data := Announce[pid]$ \;
-	\uIf {$data.done = \True$} {\KwRet \True}
-	Node $*iter := Top$ \;
-	\While{$iter \neq \NULL$}{
-		\uIf {$iter = data.curr$} {
-			$data.done := \True$ \;
-			\KwRet \True \;
-		}
-		$iter = iter.next$ \;	
-	}
-	\uIf {$data.curr.popby \neq \init$} {
-			$data.done := \True$ \;
-			\KwRet \True \;
+	Node $*nd := Announce[pid].pushNd$ \;
+	\uIf {$nd.popby \neq \init$} {\KwRet \True}
+	\uIf {$\search(nd) \mid \mid  nd.popby \neq \init$} {
+		$nd.popby.\CAS(\init, \NULL)$ \;
+		\KwRet \True \;
 	}
 	\KwRet \fail \;
+\end{algorithm}
+
+\begin{algorithm}[H]
+	\caption{boolean \search\ (Node $*nd$)}
+	
+	Node $*iter := Top$ \;
+	\While{$iter \neq \init$}{
+		\uIf {$iter = nd$} {\KwRet \True}
+		$iter := iter.next$	
+	}
+	\KwRet \False
 \end{algorithm}
 
 \caption{\push\ routine}
@@ -292,10 +301,13 @@ An exchanger object supports the \exchange\ procedure, which allows
 	
 	Node $*oldTop := Top$ \;
 	Node $*newTop$ \;
-	$Announce[pid].curr := oldTop$ \;
-	\uIf{$oldTop = \NULL$}{\KwRet \emptyst}
-	$newTop := oldTop.next$\;
-	\uIf{$Top.\CAS(oldTop, newTop)$}{\KwRet $oldTop$}
+	$Announce[pid].popNd := oldTop$ \;
+	\uIf{$oldTop = \init$} {\KwRet \emptyst}
+	$newTop := oldTop.next$ \;
+	$oldTop.popby.\CAS(\init,\NULL)$ \;
+	\uIf{$Top.\CAS(oldTop, newTop)$}{
+		\uIf {$newTop.popby.\CAS(\NULL, pid)$} {\KwRet $oldTop$}
+	}
 	\uElse {\KwRet \init}
 \end{algorithm}
 
@@ -303,15 +315,13 @@ An exchanger object supports the \exchange\ procedure, which allows
 	\caption{T \pop\ $()$}
 	
 	Node $*result$ \;
-	\opInfo\ $data$ := new \opInfo\ (\pop, \init, \False) \;
+	\popInfo\ $data$ := new \popInfo\ ($Top$) \;
 	
 	\While{\True}{
 		$Announce[pid] := data$ \;
 		$result$ := \trypop $()$ \;
 		\uIf {$result = \emptyst$} {\KwRet \emptyst}
-		\uElseIf {$result \neq \init$} {
-			\uIf {$result.popby.\CAS(\init, pid)$} {\KwRet $result.value$}
-		}
+		\uElseIf {$result \neq \init$} {\KwRet $result.value$}
 		$range$ := CalculateRange()\;
 		$duration$ := CalculateDuration()\;
 		$othervalue$ := \visit $(\NULL, range, duration)$ \;
@@ -327,15 +337,13 @@ An exchanger object supports the \exchange\ procedure, which allows
 \begin{algorithm}[H]
 	\caption{T \recoverPop $()$}
 	
-	Node $*nd := Announce[pid].curr$ \;
-	\uIf {$nd = \emptyst$} {\KwRet \emptyst}
-	\uIf {$nd = \init$} {\KwRet \fail}
-	\uIf {$nd.popby \neq \init$} {
-		\uIf {$nd.popby = pid$} {\KwRet $nd.value$}
-		\uElse {\KwRet \fail}
-	}
-	\uIf {nd.popby.\CAS(\NULL, id)} {\KwRet result.value}
-	\uElse {\KwRet \fail}
+	Node $*nd := Announce[pid].popNd$ \;
+	\uIf {$nd = \init$} {\KwRet \emptyst}
+	%\uIf {$nd.popby = pid$} {\KwRet $nd.value$}
+	\uIf{$\search(nd)$} {\KwRet \fail}
+	$nd.popby.\CAS(\NULL, pid)$ \;
+	\uIf {$nd.popby = pid$} {\KwRet $nd.value$}
+	\KwRet \fail
 \end{algorithm}
 
 \caption{\pop\ routine}
