--- a/recoverable-data-structures.tex
+++ b/recoverable-data-structures.tex
@@ -62,8 +62,8 @@
 
 \begin{document}
 
-%	\input{linked-list}
-	\input{elimination-stack}
+	\input{linked-list}
+%	\input{elimination-stack}
 %	\input{BST-robust}
 	
 
